--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -47,5 +47,93 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section class="opening-contact">
+        <h1 class="openingHour-main-title">Öppetider och Kontakt</h1>
+        <h2 class="sec-title">Våra Öppetider</h2>
+        <ul class="opening-hours">
+          <li>Måndag: 10.00-21.00</li>
+          <br />
+          <li>Tisdag: 10.00-21.00</li>
+          <br />
+          <li>Onsdag: 10.00-21.00</li>
+          <br />
+          <li>Torsdag: 10.00-21.00</li>
+          <br />
+          <li>Fredag: 10.00-23.00</li>
+          <br />
+          <li>Lördag: 10.00-23.00</li>
+          <br />
+          <li>Söndag: 10.00-20.00</li>
+          <br />
+          <li class="avikande">
+            Avikande öppettider: Röda dagar: 11.00 - 22.00
+          </li>
+        </ul>
+        <br />
+        <br />
+        <h2 class="contact-us">Kontakta oss</h2>
+        <ul class="contact-info">
+          <li>Telefonnummer: 010-7308579</li>
+          <li>E-mail: <u>info@lnlcinema.com</u></li>
+          <li>Support öppettider: Måndag - Fredag: 09.00 - 17</li>
+        </ul>
+
+        <h2 class="hyra">Vi hyr ut!</h2>
+        <p class="hyr-oss">
+          Våra salonger går även att hyra ut! <br />Kontakta oss via
+          <u>boka@lnlcinema.com</u>
+        </p>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-sections">
+        <h3>Lule Northern Lights Cinema</h3>
+        <p>biografgatan 97</p>
+        <p>97231 Luleå</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Kontakta oss</h3>
+        <a href="#">
+          <img
+            class="social-media-links"
+            src="/static/facebook.svg"
+            alt="facebook icon"
+        /></a>
+        <a href="#">
+          <img
+            class="social-media-links"
+            src="/static/instagram.svg"
+            alt="instagram icon"
+        /></a>
+        <a href="#">
+          <img
+            class="social-media-links"
+            src="/static/twitter.svg"
+            alt="twitter icon"
+        /></a>
+        <a href="mailto:">
+          <img
+            class="social-media-links"
+            src="/static/mail.svg"
+            alt="mail icon"
+        /></a>
+        <p>Telefon: 010-7308579</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Samarbete med</h3>
+        <img
+          id="municipality-logo"
+          src="/static/kommun-logo.svg"
+          alt="municipality for our city"
+        />
+        <img
+          id="cinema-collab"
+          src="/static/europa-cinemas.png"
+          alt="cinema collab"
+        />
+      </div>
+    </footer>
   </body>
 </html>
