--- a/html/bistro-menu.html
+++ b/html/bistro-menu.html
@@ -7,42 +7,74 @@
     <link rel="stylesheet" href="/static/main.css" />
     <title>LuleNorthernLightsCinema</title>
   </head>
+
   <body>
     <header class="header">
       <div class="top-header">
-        <!--  Make a good looking logotype later -->
         <a href="/index.html">
           <img
             class="logotype"
-            src="/static/logga.jpg"
+            src="/static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           id="hamburger-icon"
-          src="/static/hamburger-icon.svg"
+          src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
 
       <nav>
-        <ul>
-          <a href="#"><li>Öppetider & Kontakt</li></a>
-          <a href="#"> <li>Om våran biograf</li></a>
-          <a href="#"> <li>Biljettinfo</li></a>
-          <a href="/html/newsletter.html"> <li>Nyheter</li></a>
-          <a href="#"><li>Köp presentkort</li></a>
+        <ul class="main-nav">
+          <a href="openingHours.html">
+            <li>Öppetider & Kontakt</li>
+          </a>
+          <a href="about.html">
+            <li>Om våran biograf</li>
+          </a>
+          <a href="ticket-info.html">
+            <li>Biljettinfo</li>
+          </a>
+          <a href="newsletter.html">
+            <li>Nyheter</li>
+          </a>
+          <a href="giftCard.html">
+            <li>Köp presentkort</li>
+          </a>
         </ul>
       </nav>
     </header>
 
-    <nav>
-      <ul>
-        <li>Filmer</li>
-        <li>Salonger</li>
-        <li>Om oss</li>
-        <li>Bistro</li>
-      </ul>
+    <!-- Lägg in href-länkar för secNav i följande .js-fil:
+        js/secNav/anchors.js -->
+    <nav class="secNav">
+        <menu class="secNav-menu">
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="rep">Repertoar</button>
+                <div class="secNav-dropdown" id="rep-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="sal">Salonger</button>
+                <div class="secNav-dropdown" id="sal-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="spec">Specialvisningar</button>
+                <div class="secNav-dropdown" id="spec-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="live">Live på bio</button>
+                <div class="secNav-dropdown" id="live-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="barBist">Bar & Bistro</button>
+                <div class="secNav-dropdown" id="barBist-dropdown"></div>
+            </li>
+        </menu>
     </nav>
 
     <main>
@@ -145,6 +177,6 @@
       </div>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
