--- a/index.html
+++ b/index.html
@@ -11,96 +11,71 @@
   <body>
     <header class="header">
       <div class="top-header">
-        <!--  Make a good looking logotype later -->
-        <a href="index.html">
+        <a href="../index.html">
           <img
             class="logotype"
-            src="static/logo-cinema.png"
+            src="/static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           id="hamburger-icon"
-          src="static/hamburger-icon.svg"
+          src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
 
       <nav>
-        <ul>
-          <a href="#">
+        <ul class="main-nav">
+          <a href="./html/openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="#">
+          <a href="./html/about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="/html/ticket-info.html">
+          <a href="./html/ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="/html/newsletter.html">
+          <a href=".html/newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="/html/giftCard.html">
+          <a href=".html/giftCard.html">
             <li>Köp presentkort</li>
           </a>
-
-          <section>
-            <a href="#">
-              <img
-                class="social-media-links"
-                src="/static/facebook.svg"
-                alt="facebook icon"
-            /></a>
-            <a href="#">
-              <img
-                class="social-media-links"
-                src="/static/instagram.svg"
-                alt="instagram icon"
-            /></a>
-            <a href="#">
-              <img
-                class="social-media-links"
-                src="/static/twitter.svg"
-                alt="twitter icon"
-            /></a>
-            <a href="#">
-              <img
-                class="social-media-links"
-                src="/static/mail.svg"
-                alt="mail icon"
-            /></a>
-          </section>
         </ul>
       </nav>
     </header>
 
+    <!-- Lägg in href-länkar för secNav i följande .js-fil:
+         js/secNav/anchors.js
+    -->
     <nav class="secNav">
-      <menu class="secNav-menu">
-        <li class="secNav-menu-item">
-          <button class="dropBtn" id="rep">Repertoar</button>
-          <div class="secNav-dropdown" id="rep-dropdown"></div>
-        </li>
+        <menu class="secNav-menu">
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="rep">Repertoar</button>
+                <div class="secNav-dropdown" id="rep-dropdown"></div>
+            </li>
 
-        <li class="secNav-menu-item">
-          <button class="dropBtn" id="sal">Salonger</button>
-          <div class="secNav-dropdown" id="sal-dropdown"></div>
-        </li>
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="sal">Salonger</button>
+                <div class="secNav-dropdown" id="sal-dropdown"></div>
+            </li>
 
-        <li class="secNav-menu-item">
-          <button class="dropBtn" id="spec">Specialvisningar</button>
-          <div class="secNav-dropdown" id="spec-dropdown"></div>
-        </li>
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="spec">Specialvisningar</button>
+                <div class="secNav-dropdown" id="spec-dropdown"></div>
+            </li>
 
-        <li class="secNav-menu-item">
-          <button class="dropBtn" id="live">Live på bio</button>
-          <div class="secNav-dropdown" id="live-dropdown"></div>
-        </li>
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="live">Live på bio</button>
+                <div class="secNav-dropdown" id="live-dropdown"></div>
+            </li>
 
-        <li class="secNav-menu-item">
-          <button class="dropBtn" id="barBist">Bar & Bistro</button>
-          <div class="secNav-dropdown" id="barBist-dropdown"></div>
-        </li>
-      </menu>
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="barBist">Bar & Bistro</button>
+                <div class="secNav-dropdown" id="barBist-dropdown"></div>
+            </li>
+        </menu>
     </nav>
 
     <div class="picture-container"></div>
