--- a/html/bistro-menu.html
+++ b/html/bistro-menu.html
@@ -123,7 +123,7 @@
                 <li>Rätt 4</li>
                 <li>Rätt 5</li>
             </ul>
-            <a class="fnb fnb-book-a-table" href="mailto:">Boka bord via info@biografspegeln.se</a>
+            <a class="fnb fnb-book-a-table" href="mailto:">Boka bord via info@northernlight.se</a>
         </section>    
     <footer class="footer">
       <div class="footer-sections">
