--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <script src="js/script.js"></script>
 
     <script type="module">
-      import renderSecNav from "js/secNav/secNav.js";
+      import renderSecNav from "/js/secNav/secNav.js";
       renderSecNav(); // Pass along folderDir as an argument to inform where the secNav .html-files are located
     </script>
   </body>
