--- a/pages/openingHours.html
+++ b/pages/openingHours.html
@@ -4,67 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="static/main.css" />
+    <link rel="stylesheet" href="../static/main.css" />
     <title>LuleNorthernLightsCinema</title>
   </head>
 
   <body>
     <header class="header">
       <div class="top-header">
-        <a href="index.html">
+        <a href="../index.html">../
           <img
             class="logotype"
-            src="static/logo-cinema.png"
+            src="../static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="static/hamburger-icon.svg"
+          src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
       <nav>
         <ul class="main-nav">
-          <a href="openingHours.html">
+          <a href="../openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="about.html">
+          <a href="../about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="ticket-info.html">
+          <a href="../ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="newsletter.html">
+          <a href="../newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="giftCard.html">
+          <a href="../giftCard.html">
             <li>Köp presentkort</li>
           </a>
           <section>
             <a href="#">
               <img
                 class="social-media-links"
-                src="static/facebook.svg"
+                src="../static/facebook.svg"
                 alt="facebook icon"
             /></a>
             <a href="#">
               <img
                 class="social-media-links"
-                src="static/instagram.svg"
+                src="../static/instagram.svg"
                 alt="instagram icon"
             /></a>
             <a href="#">
               <img
                 class="social-media-links"
-                src="static/twitter.svg"
+                src="../static/twitter.svg"
                 alt="twitter icon"
             /></a>
             <a href="#">
               <img
                 class="social-media-links"
-                src="static/mail.svg"
+                src="../static/mail.svg"
                 alt="mail icon"
             /></a>
           </section>
@@ -154,23 +154,23 @@
         <a href="#">
           <img
             class="social-media-links"
-            src="static/facebook.svg"
+            src="../static/facebook.svg"
             alt="facebook icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="static/instagram.svg"
+            src="../static/instagram.svg"
             alt="instagram icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="static/twitter.svg"
+            src="../static/twitter.svg"
             alt="twitter icon"
         /></a>
         <a href="mailto:">
-          <img class="social-media-links" src="static/mail.svg" alt="mail icon"
+          <img class="social-media-links" src="../static/mail.svg" alt="mail icon"
         /></a>
         <p>Telefon: 010-7308579</p>
       </div>
@@ -178,17 +178,17 @@
         <h3>Samarbete med</h3>
         <img
           id="municipality-logo"
-          src="static/kommun-logo.svg"
+          src="../static/kommun-logo.svg"
           alt="municipality for our city"
         />
         <img
           id="cinema-collab"
-          src="static/europa-cinemas.png"
+          src="../static/europa-cinemas.png"
           alt="cinema collab"
         />
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script type="module">
       import renderSecNav from "js/secNav/secNav.js";
       renderSecNav("openinghours.html"); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
