--- a/index.html
+++ b/index.html
@@ -158,10 +158,6 @@
     </footer>
 
     <script src="js/script.js"></script>
-
-    <script type="module">
-      import renderSecNav from "../js/secNav/secNav.js";
-      renderSecNav(); // Pass along folderDir as an argument to inform where the secNav .html-files are located
-    </script>
+    <script src="js/secNav/secNav.js"></script>
   </body>
 </html>
