--- a/pages/index.html
+++ b/pages/index.html
@@ -157,7 +157,7 @@
       </div>
     </footer>
 
-    <script src="js/script.js"></script>
-    <script src="js/secNav/secNav.js" type="module"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/secNav/secNav.js" type="module"></script>
   </body>
 </html>
